[package]
name = "credit"
version = "1.0.0"
authors = ["Colin Woodbury <colin@fosskers.ca>"]
edition = "2018"
description = "A fast tool for measuring Github repository contributions."
homepage = "https://github.com/fosskers/credit"
repository = "https://github.com/fosskers/credit"
readme = "README.md"
license = "MIT"
keywords = ["github"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
counter = "0.5"
gumdrop = "0.8"
indicatif = "0.15"
isahc = { version = "0.9", features = ["json"] }
itertools = "0.9"
rayon = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
